# polymarket-bot

./: .dockerignore  .env.example  .gitignore  COMMAND_AUDIT.md  DEPOSIT_WALLET_EXPERIMENT.md  Dockerfile  GO_LIVE_RUNBOOK.md  IEM_INTEGRATION_PLAN.md  LIVE_TRADING_BUILD_PLAN.md  SECURITY_PLAN.md  WALLET_LIVE_PLAN.md  WEATHER_MODEL_UPGRADE.md  analyze_gaps.py  build_historical_skill.py  calibration_report.py  city_bias_report.py  docker-compose.yml  enable_deposit_wallet.py  gap_logger.py  model_skill_tracker.py  replay_backtest.py  requirements.txt  rotate_secrets_key.py  spike_approve_deposit_wallet.py  spike_clobauth_1271.py  spike_deploy_deposit_wallet.py  spike_deposit_wallet.py  spike_eoa.py  spike_eoa_probe.py  spike_gnosis.py  spike_live_order.py  spike_poly1271_probe.py  spike_redeem.py  spike_sell_order.py  spike_v1.py  spike_wrap_deposit_wallet.py  telegram_bot.py  telegram_onboarding.py  telegram_views.py  validate_live_order.py  (+1 more)
Audits/: AUDIT_PLAN.md  AUDIT_PROMPT.md  AUDIT_REPORT.md
dashboard/: api.py  scanner_bridge.py  server.py  state.py
rust_deposit_spike/: Cargo.toml
rust_deposit_spike/src/: main.rs
scripts/: backcheck_station_truth.py  backup_secrets.sh  discover_stations.py  phase3_backtest.py  relabel_paper_truth.py
tests/: conftest.py  test_audit.py  test_autowrap.py  test_city_bias.py  test_command_audit.py  test_dashboard_ui.py  test_fanout.py  test_globe_upgrade.py  test_historical_skill.py  test_iem_client.py  test_io_perms.py  test_live_backtest.py  test_live_ledger.py  test_live_stats.py  test_live_trader.py  test_market_scanner.py  (+23 more)
(+47 files in other folders)
